--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "dissertationproject",
+  "name": "VisualizingUniRanks",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
     "test": "mocha test",
     "start": "nodemon app.js",
-    "deploy": "gh-pages -d -DissertationProject"
+    "deploy": "gh-pages -d -VisualizingUniRanks"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JeremyElliott1/DissertationProject.git"
+    "url": "git+https://github.com/JeremyElliott1/VisualizingUniRanks.git"
   },
   "author": "Jeremy E",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JeremyElliott1/DissertationProject/issues"
+    "url": "https://github.com/JeremyElliott1/VisualizingUniRanks/issues"
   },
-  "homepage": "https://github.com/JeremyElliott1/DissertationProject#readme",
+  "homepage": "https://github.com/JeremyElliott1/VisualizingUniRanks#readme",
   "devDependencies": {
     "chai": "^4.2.0",
     "gh-pages": "^3.1.0",
