--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "VisualizingUniRanks",
+  "name": "visualizinguniranks",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
