--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha test",
-    "start": "nodemon app.js",
-    "deploy": "gh-pages -d -DissertationProject"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
